# NowledgeBase

./: .env.example  .gitignore  DEBUG.md  README.md  SETUP.md  index.html  package-lock.json  package.json
src/: App.tsx  CategoryTree.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/models/: category.rs  database.rs  link.rs  mod.rs  note.rs  ui_state.rs
src-tauri/src/services/: ai_config.rs  ai_service.rs  category_service.rs  link_service.rs  mod.rs  note_service.rs  storage_service.rs
src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx
src/components/graph/: GraphContainer.tsx  GraphNode.tsx  LinkCreationModal.tsx  LinkEditModal.tsx
src/components/notes/: NoteCard.tsx  NoteReaderMode.tsx  NotesContainer.tsx
src/components/shared/: CategoryPicker.tsx  ErrorMessage.tsx  MemoSpace.tsx  ModeToggle.tsx  Toast.tsx
src/contexts/: AppDataContext.tsx
src/hooks/: useChat.ts  useNotes.ts  useToast.ts
src/services/: api.ts
src/styles/: category-picker.css  category-tree.css  chat-mode.css  forms.css  globals.css  graph-core.css  graph-nodes.css  layout.css  memo-space.css  modals.css  mode-toggle.css  notes-system.css  reader-mode.css  smart-categorization.css  toast-notifications.css  utilities.css
src/types/: Category.ts  Chat.ts  Graph.ts  Link.ts  Note.ts  index.ts
